Enhance DeliverySystemCLI with improved input validation and update Gradle binary files for consistency
- Improved input validation for adding drivers, including checks for name, phone number, and vehicle type in DeliverySystemCLI.
- Enhanced order processing logic to assign drivers based on availability and active order count, ensuring better resource management.
- Updated various Gradle binary files, including execution history, file hashes, and lock files, to ensure consistency and reflect recent changes, contributing to a more reliable build process.

These changes collectively enhance the application's usability and maintain the integrity of the build process.